# ai-orchestrator-hub

./: .agent.md  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ADVANCED_NEURAL_TEST_RESULTS.md  AGENT.md  AGENTS.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODEBASE_ANALYSIS_AND_IMPROVEMENTS.md  CODE_ANALYSIS_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DAILY_WORKFLOW_GUIDE.md  DEMO_SCRIPT.md  DEPLOYMENT_STRATEGY.md  ENHANCED_MONITORING_SETUP.md  FANN_FIX_SUMMARY.md  FINAL_IMPLEMENTATION_STATUS.md  FINAL_LSTM_STATUS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOAD_TESTING_VALIDATION_RESULTS.md  LSTM_IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION_COMPLETE.md  MONITORING_DEMONSTRATION.md  NEURAL_ARCHITECTURE.md  OPTIMIZATION_ACTION_PLAN.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_ANALYSIS_REPORT.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_REFACTORING_PROGRESS.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_2_ROADMAP.md  PHASE_3_SUMMARY.md  PRIORITY_1_OPTIMIZATIONS_COMPLETE.md  (+23 more)
backend/: CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE_VALIDATION_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  README.md  RELEASE_NOTES.md  REORGANIZATION_SUMMARY.md  TESTING.md  bench_runner.rs  clippy.toml  docker-compose.override.yml  docker-compose.yml  performance_benchmark.rs  rustfmt.toml  simple_benchmark  simple_perf_benchmark  simple_perf_benchmark.rs  test_agent_types  test_output.txt
backend/.github/workflows/: ci-cd.yml
backend/benches/: agent_benchmarks.rs  cpu_benchmarks.rs  criterion_benchmark.rs  io_benchmarks.rs  memory_benchmarks.rs  multimodal_agent_benchmarks.rs  neural_benchmarks.rs  performance_optimizations.rs  simple_benchmark.rs  swarm_benchmarks.rs
backend/data/: hive_persistence.db
backend/docs/: COMPLIANCE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_MONITORING.md  api.md  best-practices.md  configuration.md  deployment.md  faq.md  getting-started.md  installation.md  modules.md  observability.md  operational-procedures.md  performance.md  security-hardening.md  system-architecture.md  testing.md  training-materials.md  troubleshooting-guide.md  troubleshooting.md  usage.md
backend/docs/api/: agents.md  health.md  index.md  metrics.md  tasks.md  websocket.md
backend/docs/exercises/: basic-setup.md
backend/docs/video-scripts/: getting-started.md
backend/examples/: adaptive_verification_demo.rs  advanced_neural_test.rs  advanced_persistence_demo.rs  agent_monitor_example.rs  lstm_demo.rs  multimodal_agent_demo.rs  neural_comparison.rs  pair_programming_demo.rs  persistence_demo.rs  production_monitoring_example.rs  self_healing_swarm_demo.rs  simple_multimodal_demo.rs  simple_verification_demo.rs
backend/helm/ai-orchestrator/: Chart.yaml  values.yaml
backend/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  network-policy.yaml  pvc.yaml  secret.yaml  service.yaml
backend/monitoring/: alert_rules.yml  prometheus.yml
backend/scripts/: deploy.sh  security_audit.sh  security_compliance_check.sh
backend/settings/: default.toml  development.toml  development_monitoring.toml  grafana_dashboards.json  production.toml  production_monitoring.toml  prometheus_alerting_rules.yml  staging_monitoring.toml
backend/src/: agent.rs  communication.rs  cpu_optimization.rs  hive.rs  init.rs  lib.rs  main.rs  mcp.rs  memory_pool.rs  monitoring.rs  neural.rs  nlp.rs  optimized_agent.rs  resource_manager.rs  server.rs  task.rs  work_stealing_queue.rs
backend/src/agents/: adaptive_verification.rs  agent.rs  agent_evolution.rs  collaborative_learning.rs  communication_test.rs  memory.rs  mod.rs  multimodal_agent.rs  multimodal_agent_tests.rs  optimized_agent.rs  recovery.rs  self_healing_swarm.rs  self_healing_swarm_tests.rs  simple_verification.rs  skill_evolution.rs  verification.rs  verification_engine.rs  verification_strategies.rs
backend/src/api/: handlers.rs  mod.rs  responses.rs  validation.rs
backend/src/communication/: README.md  communication.rs  mcp.rs  mcp_batch.rs  mcp_cache.rs  mcp_cached_tools.rs  mcp_composition.rs  mcp_http.rs  mcp_plugins.rs  mcp_streaming.rs  mcp_tool_registry.rs  mcp_unified_error.rs  mod.rs  optimized_messaging.rs  patterns.rs  protocols.rs  tests.rs
backend/src/core/: auto_scaling.rs  fallback.rs  hive.rs  hive_legacy.rs  mod.rs  optimized_swarm_system.rs  swarm_coordination.rs  swarm_intelligence.rs
backend/src/infrastructure/: advanced_metrics.rs  async_optimizer.rs  benchmarks.rs  cache.rs  cache_invalidation.rs  cache_monitoring.rs  cache_optimization.rs  cache_warming.rs  cached_query.rs  circuit_breaker.rs  config.rs  connection_pool.rs  cpu_load_balancer.rs  cpu_optimizer.rs  intelligent_alerting.rs  intelligent_cache.rs  load_testing.rs  memory_analysis.rs  memory_pool.rs  metrics.rs  middleware.rs  mod.rs  monitoring.rs  monitoring_legacy.rs  network_optimizer.rs  performance_dashboard.rs  performance_integration.rs  performance_optimizer.rs  persistence.rs  resource_manager.rs  security_middleware.rs  streaming.rs  telemetry.rs  throughput_optimizer.rs  websocket_dashboard.rs
backend/src/neural/: adaptive_learning.rs  core.rs  cpu_optimization.rs  data.rs  experiments.rs  migration_helper.rs  mod.rs  monitoring.rs  neural.rs  nlp.rs  optimized_integration.rs  optimized_network.rs  training.rs
backend/src/tasks/: mod.rs  task.rs  work_stealing_queue.rs
backend/src/tests/: adaptive_verification_edge_case_tests.rs  mod.rs  (+10 more)
backend/tests/: api_integration_tests.rs  auth_integration_tests.rs  auth_unit_tests.rs  chaos_engineering_tests.rs  comprehensive_security_tests.rs  comprehensive_test_suite.rs  edge_case_multimodal_tests.rs  integration_multimodal_agent.rs  performance_multimodal_tests.rs  performance_regression_tests.rs  standalone_chaos_tests.rs  stress_test_multimodal.rs  swarm_coordinator_tests.rs  test_report_generator.rs  test_utils.rs  test_utils_multimodal.rs  validation_test.rs
(+404 files in other folders)
