[package]
name = "multiagent-hive"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
dashmap = "5.5"
rand = "0.8"
nalgebra = "0.32"
petgraph = "0.6"
num_cpus = "1.16"

# Optional: Add ruv-FANN for advanced neural capabilities
ruv-fann = { version = "0.1.6", optional = true, features = ["std", "serde", "parallel"] }

[features]
default = ["basic-nlp"]
basic-nlp = []
advanced-neural = ["ruv-fann"]
gpu-acceleration = ["ruv-fann/gpu"]